src/styles/Section.css
:root{
    --light-gray: #f4f4f4;
    --white: #ffffff;
}

.page{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

section{
    width: 100%;
    height: 100%;
}
section.side{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
    align-items: stretch;
}

section.side.left{
    flex-direction: row;
}
section.side.right{
    flex-direction: row-reverse;
}

section.side>.image-container{
    width: 55%;
}
section.side>.content{
    width: 45%;
}

section>.content{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    box-sizing: border-box;
}
section>.content>div{
    width: 100%;
}

section.side>.content{
    padding:5% 10%;
}
section.vertical>.content{
    padding: 5% 5%;
}
section>.content.more-pad-h{
    padding-left: 15%;
    padding-right: 15%;
}
section>.content.more-pad-v{
    padding-top: 10%;
    padding-bottom: 10%;
}
section>.content.less-pad-h{
    padding-left: 5%;
    padding-right: 5%;
}

section>.content.shrink-text>p{
    max-width: 60%;
}

section.hero>.content{
    justify-content: space-between;
}


section>.content.light-gray{
    background-color: var(--light-gray);
}

section>.content.white{
    background-color: var(--white);
}



section.vertical{
    display: block;
    position: relative;
}

section.vertical>.image-container{
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
}

section.no-margin,section.no-margin>.content{
    padding: 0;
    margin:0;
}

section.hero {
    overflow: hidden;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--color-background);
    height: 400px;
}



@media screen and (max-width: 768px) {
    section.hero {
        max-height: 400px;
    }

    section.side.left{
        flex-direction: column-reverse;
    }
    section.side.right{
        flex-direction: column;
    }

    section.side>.image-container{
        width: 100%;
        height: 300px;
    }
    section.side>.content{
        width: 100%;
        align-items: center;
        text-align: center;
    }
}

